# bm-obuhvati

./: .gitignore  README.md  scrape_polling_stations.py
data/: osm_cache.json
docs/parsing-matching/: 01-normalization.md  02-coverage-parsing.md  03-document-extraction.md  04-amendments.md  05-street-resolution.md  06-claim-resolution.md  07-review-flags.md  08-worker-live-preview.md  09-volunteer-mapping.md  10-station-edits.md  README.md
pipeline/: compare_volunteer.py  compare_volunteer_nb.py  config.py  conftest.py  d1_apply.sh  d1_reconcile.py  dirty_scope.py  export_automated_geojson.py  fetch_overrides.sh  map_volunteer_polygons.py  pyproject.toml  recompute.sh  split_sql.py  stage01_load_register.py  stage02_extract_docs.py  stage03_parse_coverage.py  stage03b_apply_amendments.py  stage03c_reconcile_edits.py  stage04_match_addresses.py  stage05_voronoi.py  stage06_build_sqlite.py  sync_r2.sh
pipeline/common/: boundaries.py  coverage_parse.py  io.py  normalize.py  osm.py  transliterate.py
pipeline/tests/: README.md  test_amendments.py  test_claim_resolution.py  test_coverage_parse.py  test_derived_import.py  test_document_extraction.py  test_normalize.py  test_osm.py  test_station_edits.py  test_street_resolution.py  test_transliterate.py  test_volunteer_mapping.py
worker/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
worker/migrations/: 0001_init.sql  0002_station_status.sql  0003_station_status_drop_fk.sql  0004_segment_review_reason.sql  0005_municipality_parent.sql  0006_segment_overrides.sql  0007_station_added_segments.sql  (+6 more)
(+12 files in other folders)
